--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -30,7 +30,7 @@
 
     <nav class="navbar navbar-expand-lg bg-body-invisible fixed-top" id="non">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="/images/datoms_logo_registered-2.webp" alt="" style="width: 130px;"></a>
+        <a class="navbar-brand" href="#"><img src="images/datoms_logo_registered-2.webp" alt="" style="width: 130px;"></a>
         <button class="navbar-toggler shadow-none border-0" type="button" data-bs-toggle="offcanvas"
           data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -67,12 +67,12 @@
               </li>
                <div class="right-div">
                 
-              <img id="aicpa" src="/dropdown img/Rectangle-16-2.png" alt="" >
+              <img id="aicpa" src="dropdown img/Rectangle-16-2.png" alt="" >
               <h5 id="secure">SECURE BY DESIGN</h5>
               <p id="soc2">We’re now SOC2 Type II certified</p>
               <a id="learnmore-1" href="#">Learn more</a>
 
-              <img id="blog" src="/dropdown img/Rectangle-18-3.png" alt="" >
+              <img id="blog" src="dropdown img/Rectangle-18-3.png" alt="" >
               <h5 id="empowering">Empowering OEMs in the Age of Smart Products:</h5>
               <p id="rising">The rising demand for smart and connected products</p>
               <a id="learnmore-2" href="#">Learn more</a>
@@ -109,7 +109,7 @@
               </li>
                    
               <h5 id="cases">USE CASES</h5>
-              <img id="blog-img" src="/dropdown img/Rectangle-18-3.png" alt="">
+              <img id="blog-img" src="dropdown img/Rectangle-18-3.png" alt="">
               <h1 id="age-of-smart">Empowering OEMs in the Age of Smart <br> Products:</h1>
               <p id="demand"> The demand for smart and connected products <br> is reshaping the industry.</p>
               <a href="#" id="learnmore-3">Learn more</a>
@@ -129,7 +129,7 @@
     </nav>
   </header>
   <div class="first-bg-img">
-    <img src="/images/coldstorage2.jpeg" alt="#">
+    <img src="images/coldstorage2.jpeg" alt="#">
   </div>
   <main class="">
     <section>
@@ -167,7 +167,7 @@
     <div class="main-com-cha">
 
       <div class="boy-image">
-        <img id="common-challenge" src="/images/common challenges.webp" alt="">
+        <img id="common-challenge" src="images/common challenges.webp" alt="">
       </div>
       <div class="main-com-sec">
         <div class="ware-house">
@@ -202,12 +202,12 @@
         <h6>Ensure seamless operation with real-time monitoring of:</h6>
       </div>
      <ul class="images-part list-inline">
-      <li class="list-inline-item   management  Compressors"><img  id="six-image" src="/images/6img/Compressors.webp" alt=""><p>Compressors</p></li>
-      <li class="list-inline-item   management  solar"><img  id="six-image" src="/images/6img/Solar-Panels.webp" alt=""><p>Solar Panels</p></li>
-      <li class="list-inline-item   management  grid"><img  id="six-image" src="/images/6img/Grids.webp" alt=""><p>Grids</p></li>
-      <li class="list-inline-item   management  generator"><img  id="six-image" src="/images/6img/Generators.webp" alt=""><p>Generators</p></li>
-      <li class="list-inline-item   management  energy"><img  id="six-image" src="/images/6img/Energy.webp" alt=""><p>Energy</p></li>
-      <li class="list-inline-item   management  chillers"><img  id="six-image" src="/images/6img/cold_icons-60.webp" alt=""><p>Chillers</p></li>
+      <li class="list-inline-item   management  Compressors"><img  id="six-image" src="images/6img/Compressors.webp" alt=""><p>Compressors</p></li>
+      <li class="list-inline-item   management  solar"><img  id="six-image" src="images/6img/Solar-Panels.webp" alt=""><p>Solar Panels</p></li>
+      <li class="list-inline-item   management  grid"><img  id="six-image" src="images/6img/Grids.webp" alt=""><p>Grids</p></li>
+      <li class="list-inline-item   management  generator"><img  id="six-image" src="images/6img/Generators.webp" alt=""><p>Generators</p></li>
+      <li class="list-inline-item   management  energy"><img  id="six-image" src="images/6img/Energy.webp" alt=""><p>Energy</p></li>
+      <li class="list-inline-item   management  chillers"><img  id="six-image" src="images/6img/cold_icons-60.webp" alt=""><p>Chillers</p></li>
      </ul>
      <main>
       <svg id="line-bar" xmlns="http://www.w3.org/2000/svg" width="84" height="10" viewBox="0 0 84 10" fill="none">
@@ -242,12 +242,12 @@
         </div>
     </div>
     <div class="chambers">
-      <img src="/images/solar-UI-2.webp" alt="">
+      <img src="images/solar-UI-2.webp" alt="">
     </div>
   </main>
   <main class="Tailored">
     <div class="CorrelationAnalysis">
-        <img id="solar-ui" src="/images/solar-UI-1.webp" alt="">
+        <img id="solar-ui" src="images/solar-UI-1.webp" alt="">
     </div>
 
     <div class="SpecificAnalytics">
@@ -273,7 +273,7 @@
         </div>
     </div>
     <div class="humidity">
-          <img src="/images/solar-dashboard-UI (1).webp" alt="">
+          <img src="images/solar-dashboard-UI (1).webp" alt="">
     </div>
   </main>
   <article>
@@ -284,7 +284,7 @@
       </svg>
       <h1>Scalable Solutions for Multi-Room Operations</h1>
       <p>As your business expands, our IoT solution facilitates the easy addition of <b>new chambers or rooms</b> to the platform, ensuring smooth integration without disruption. Whether you’re overseeing a <b>single warehouse or multiple locations</b>, our system delivers consistent and reliable temperature control for each section, complete with <b>detailed room-wise analysis</b> to optimize every space efficiently.</p>
-      <img src="/images/project/solar-UI-3.webp" alt="">
+      <img src="images/project/solar-UI-3.webp" alt="">
       <svg id="line-bar" xmlns="http://www.w3.org/2000/svg" width="84" height="10" viewBox="0 0 84 10" fill="none">
         <rect width="84" height="10" rx="5" fill="#fd8109"></rect>
         <rect width="84" height="10" rx="5" fill="#fd8109"></rect>
@@ -335,7 +335,7 @@
         </div>
         <div class="col">
           <div class="p-3" id="door-wifi">
-            <img src="/images/project/images (1).png" alt="image">
+            <img src="images/project/images (1).png" alt="image">
             <h1>Door Status:</h1>
             <p>Frequent or prolonged door openings can lead to temperature spikes, so monitoring door activity helps reduce energy consumption and maintain conditions.
             </p>
@@ -354,7 +354,7 @@
     <div class="energy-management">
 
       <div class="maximize-energy">
-                <img src="/images/project/solar-UI.webp" alt="">
+                <img src="images/project/solar-UI.webp" alt="">
       </div>
       <div class="uninerpted">
           <h1>ENERGY MANAGEMENT SYSTEM</h1>
@@ -382,7 +382,7 @@
         </ul>
       </div>
       <div class="time-tempreature">
-        <img src="/images/project/Energy-Trend-Correlation-solar-UI.webp" alt="image">
+        <img src="images/project/Energy-Trend-Correlation-solar-UI.webp" alt="image">
       </div>
     </div>
     <div class="monitoring-feature">
@@ -405,13 +405,13 @@
              </ul>
       </div>
       <div class="asset-utilization">
-              <img src="/images/project/2solar-UI-1.webp" alt="">
+              <img src="images/project/2solar-UI-1.webp" alt="">
       </div>
     </div>
 
     <div class="sclable-monitoring">
       <div class="flexible-easy">
-              <img src="/images/project/Scalable-Monitoring-System.webp" alt="">
+              <img src="images/project/Scalable-Monitoring-System.webp" alt="">
       </div>
       <div class="growing-operation">
             <h1>SCALABLE MONITORING SOLUTIONS</h1>
@@ -447,7 +447,7 @@
             </ul>
       </div>
       <div class="additional-revenue">
-          <img src="/images/project/PolarBear-R1-C1-IMG_6282.webp" alt="">
+          <img src="images/project/PolarBear-R1-C1-IMG_6282.webp" alt="">
       </div>
     </div>
     <div class="apllication-use">
@@ -469,15 +469,15 @@
           <p>Supermarkets Darkstores</p>
         </div>
         <div class="col">
-          <img src="/images/project/Healthcare-Facilities-1.webp" alt="healthcare" style="max-width: 100%;">
+          <img src="images/project/Healthcare-Facilities-1.webp" alt="healthcare" style="max-width: 100%;">
           <p>Healthcare Facilities</p>
         </div>
         <div class="col">
-          <img src="/images/project/Mask-group-1.webp" alt=""style="max-width: 100%;">
+          <img src="images/project/Mask-group-1.webp" alt=""style="max-width: 100%;">
           <p>Fish and Seafood Markets</p>
         </div>
         <div class="col">
-          <img src="/images/project/Pharmaceutical-and-Biotech-1.webp" alt="medicene" style="max-width: 100%;">
+          <img src="images/project/Pharmaceutical-and-Biotech-1.webp" alt="medicene" style="max-width: 100%;">
           <p>Pharmaceutical and Biotech</p>
         </div>
       </div>
@@ -485,19 +485,19 @@
     <div class="container text-center" id="images-sec">
       <div class="row row-cols-4">
         <div class="col">
-          <img src="/images/project/Mask-group-2.webp" alt="powder" style="max-width: 100%;">
+          <img src="images/project/Mask-group-2.webp" alt="powder" style="max-width: 100%;">
           <p>Dye and Cosmetics Industry</p>
         </div>
         <div class="col">
-          <img src="/images/project/Mask-group.webp" alt="" style="max-width: 100%;">
+          <img src="images/project/Mask-group.webp" alt="" style="max-width: 100%;">
           <p>Restaurants and Food Services</p>
         </div>
         <div class="col">
-          <img src="/images/project/Mask-group-4.webp" alt="" style="max-width: 100%;">
+          <img src="images/project/Mask-group-4.webp" alt="" style="max-width: 100%;">
           <p>Breweries & Wineries</p>
         </div>
         <div class="col">
-          <img src="/images/project/Mask-group-5.webp" alt="" style="max-width: 100%;">
+          <img src="images/project/Mask-group-5.webp" alt="" style="max-width: 100%;">
           <p>Meat & Poultry Industry</p>
         </div>
       </div>
@@ -561,10 +561,10 @@
           </div>
           <div class="circle-img ">
             <ul class="list-inline">
-              <li class="list-inline-item"><a href="#"><img src="/images/project/1.webp" alt=""></a></li>
-              <li class="list-inline-item"><a href="#"><img src="/images/project/2.webp" alt=""></a></li>
-              <li class="list-inline-item"> <a href="#"><img src="/images/project/3.webp" alt=""></a></li>
-              <li class="list-inline-item"> <a href="#"><img src="/images/project/4.webp" alt=""></a></li>
+              <li class="list-inline-item"><a href="#"><img src="images/project/1.webp" alt=""></a></li>
+              <li class="list-inline-item"><a href="#"><img src="images/project/2.webp" alt=""></a></li>
+              <li class="list-inline-item"> <a href="#"><img src="images/project/3.webp" alt=""></a></li>
+              <li class="list-inline-item"> <a href="#"><img src="images/project/4.webp" alt=""></a></li>
             </ul>
           </div>
           <div class="copyright-line">
